--- a/pages/english/english.html
+++ b/pages/english/english.html
@@ -24,13 +24,11 @@
     <textarea type="text" id="input"></textarea>
     <div id="translate" onclick="translatePigLatin(document.getElementById('input').value)">Translate</div>
     <div id="translated">Translated in Pig Latin:</div>
-    <div id="translatedtext"></div>
+    
     <div id="hr"></div>
-    <!--
-    <textarea type="text" id="input2"></textarea>
-    <div id="translate2" onclick="translatePigLatin(document.getElementById('input').value)">Translate</div>
-    <div id="translated2">Translated in Pig Latin:</div>
-    <div id="translatedtext2"></div>-->
+    <div id="translatedbox">
+        <div id="translatedtext"></div>
+    </div>
     
 </body>
 </html>
