--- a/pages/english/english.html
+++ b/pages/english/english.html
@@ -24,11 +24,8 @@
     <textarea type="text" id="input"></textarea>
     <div id="translate" onclick="translatePigLatin(document.getElementById('input').value)">Translate</div>
     <div id="translated">Translated in Pig Latin:</div>
-    
     <div id="hr"></div>
-    <div id="translatedbox">
-        <div id="translatedtext"></div>
-    </div>
+    <div id="translatedtext" style="width: 40vh;"></div>
     
 </body>
 </html>
