--- a/pages/english/english.html
+++ b/pages/english/english.html
@@ -25,7 +25,7 @@
     <div id="translate" onclick="translatePigLatin(document.getElementById('input').value)">Translate</div>
     <div id="translated">Translated in Pig Latin:</div>
     <div id="hr"></div>
-    <div id="translatedtext" style="width: 110vh;"></div>
+    <div id="translatedtext"></div>
     <div id="copy" onclick="copy()">Copy Text</div>
     
 </body>
