--- a/pages/english/english.html
+++ b/pages/english/english.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="./style.css">
     <script src="./../../js/script.js"></script>
@@ -7,16 +8,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
+
 <body>
     <div class="head">
     </div>
@@ -27,6 +33,36 @@
     <div id="hr"></div>
     <div id="translatedtext"></div>
     <div id="copy" onclick="copy()">Copy Text</div>
-    
+    <div id="wiki">
+        <div style="font-family: 'Varta', sans-serif;
+        font-size: 18px;
+        top:15px;
+        margin-bottom: 35px;
+        left: 0px;
+        position: relative;
+        text-decoration: none">source: <a href="https://www.dictionary.com/e/pig-latin/">https://www.dictionary.com/e/pig-latin/</a></div>
+        <div style="font-size: 45px; margin-top: 20px; margin-bottom: 20px;">What is Pig Latin?</div>
+        Pig Latin is not actually a language but a language game that children (and some adults) use <br> to speak “in
+        code.” Pig Latin words are formed by altering words in English.
+
+        <div style="font-size: 45px; margin-top: 20px; margin-bottom: 20px;">How it works</div> First, pick any English
+        word. We’ll use dictionary. Next, move the first consonant or <br>consonant cluster to the end of the word:
+        “ictionary-d.” Now add “ay” to the end of<br> the word: “ictionary-day.” That’s all there is to it; you’ve
+        formed a word in Pig Latin.
+
+        <div style="font-size: 45px; margin-top: 20px; margin-bottom: 20px;">How did Pig Latin get its name?</div>
+        We don’t know for certain how Pig Latin got its name, though we do know that the <br> game has nothing to do with
+        Latin. That’s an intentional misnomer. There is a <br> mention of it in an article published in a magazine in the
+        late nineteenth century. <br> And, supposedly, Thomas Jefferson composed letters in Pig Latin.
+
+        <div style="font-size: 45px; margin-top: 20px; margin-bottom: 20px;">Have Pig Latin words become real words?</div> 
+        A handful of Pig Latin words are now an accepted part of English slang, such as <br> ixnay and amscray. (Nix and
+        scram.)
+    </div>
+    <div class="wrapper">
+        <div class="push"></div>
+    </div>
+    <div class="footer"> <div id="make">Website created by Viciox -  <a href="https://viciothedev.github.io/portfolio/" style="color: rgb(0, 153, 255); cursor: pointer;">visit portfolio by clicking here</a></div> <div id="cr"> Informations about Pig Latin by: <a href="https://www.dictionary.com/e/pig-latin/" style="color: rgb(0, 153, 255); cursor: pointer;"> www.dictionary.com</a></div></div>
 </body>
+
 </html>
