finish (for now)

--- a/pages/english/english.html
+++ b/pages/english/english.html
@@ -25,6 +25,10 @@
 
 <body>
     <div class="head">
+        <div id="menu"> 
+                <a href="">
+                <div class="menuT">Home</div></a>
+        </div>     
     </div>
     <img src="../../img/logo.png" id="logo">
     <textarea type="text" id="input"></textarea>
