--- a/pages/italian/italian.html
+++ b/pages/italian/italian.html
@@ -19,6 +19,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8211078674815877"
+     crossorigin="anonymous"></script>
 
     <title>Pig Latin translator - Italian</title>
 </head>
