--- a/pages/english/english.html
+++ b/pages/english/english.html
@@ -22,7 +22,7 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8211078674815877"
      crossorigin="anonymous"></script>
 
-    <title>Document</title>
+    <title>English - Pig Latin translator</title>
 </head>
 
 <body>
